# closet-ai

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
client/: package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx  types.ts
client/src/components/: Carousel.tsx  Chat.tsx  Header.tsx  ItemCard.tsx  ItemForm.tsx  WardrobeGrid.tsx
client/src/context/: AuthContext.tsx
client/src/pages/: ClosetPage.tsx  ItemPage.tsx  LoginPage.tsx
docs/superpowers/specs/: 2026-04-22-celery-async-upload-design.md
server/: Dockerfile  config.py  pyproject.toml  requirements.txt  seed.py
server/app/: main.py  worker.py
server/app/api/: deps.py
server/app/api/routes/: auth.py  chat.py  wardrobe.py
server/app/core/: config.py
server/app/db/: session.py
server/app/models/: __init__.py  clothes.py  embedding.py  user.py
server/app/schemas/: __init__.py  clothes.py  user.py
server/app/services/: __init__.py  auth.py  clothing.py  clothing_service.py  file.py  vision.py
server/scripts/: process_image_test.py
server/tests/: conftest.py  test_auth.py  test_embedding_model.py  test_wardrobe.py
